--- a/src/app/views/features/campaign/campaign.component.html
+++ b/src/app/views/features/campaign/campaign.component.html
@@ -79,8 +79,8 @@
             <td>{{ campaign.name }}</td>
             <td>{{ campaign.parent_campaign_name }}</td>
             <td>{{ campaign.type }}</td>
-            <td>{{ campaign.start_date }}</td>
-            <td>{{ campaign.end_date }}</td>
+            <td>{{ campaign.start_date |date:'yyyy-MM-dd'}}</td>
+            <td>{{ campaign.end_date |date:'yyyy-MM-dd'}}</td>
             <td>{{ campaign.created_by }}</td>
             <!-- <td>{{ campaign.member }}</td> -->
             <td>
@@ -226,7 +226,7 @@
         <br>
         <div class="mt-3 field">
           <label class="disable">{{(campaign_form.controls['created_by'].value)}}</label>
-          <label class="ml-2 disable">{{(campaign_form.controls['created_at'].value)}}</label>
+          <label class="ml-2 disable">{{(campaign_form.controls['created_at'].value |date:'yyyy-MM-dd HH:mm')}}</label>
         </div>
       </div>
       <div class="col-12 md:col-6 lg:col-6">
@@ -234,7 +234,7 @@
         <br>
         <div class="mt-3 field">
           <label class="disable">{{(campaign_form.controls['updated_by'].value)}}</label>
-          <label class="ml-2 disable">{{(campaign_form.controls['updated_at'].value)}}</label>
+          <label class="ml-2 disable">{{(campaign_form.controls['updated_at'].value |date:'yyyy-MM-dd HH:mm')}}</label>
         </div>
       </div>
     </div>
