--- a/src/app/views/features/campaign/view-campaign/view-campaign.component.html
+++ b/src/app/views/features/campaign/view-campaign/view-campaign.component.html
@@ -22,11 +22,11 @@
             </div>
             <div class="col-12 flex justify-content-center">
               <label>開始日期: </label>
-              <label>{{GetOneStartDate}}</label>
+              <label>{{GetOneStartDate | date:'yyyy-MM-dd'}}</label>
             </div>
             <div class="col-12 flex justify-content-center">
               <label>結束日期: </label>
-              <label>{{GetOneEndDate}}</label>
+              <label>{{GetOneEndDate | date:'yyyy-MM-dd'}}</label>
             </div>
           </div>
         </form>
@@ -286,7 +286,7 @@
                   <br>
                   <div class="mt-3 field">
                     <label class="disable">{{(campaign_form.controls['created_by'].value)}}</label>
-                    <label class="ml-2 disable">{{(campaign_form.controls['created_at'].value)}}</label>
+                    <label class="ml-2 disable">{{(campaign_form.controls['created_at'].value |date:'yyyy-MM-dd HH:mm')}}</label>
                   </div>
                 </div>
                 <div class="col-12 md:col-6 lg:col-6">
@@ -294,7 +294,7 @@
                   <br>
                   <div class="mt-3 field">
                     <label class="disable">{{(campaign_form.controls['updated_by'].value)}}</label>
-                    <label class="ml-2 disable">{{(campaign_form.controls['updated_at'].value)}}</label>
+                    <label class="ml-2 disable">{{(campaign_form.controls['updated_at'].value |date:'yyyy-MM-dd HH:mm')}}</label>
                   </div>
                 </div>
               </div>
