--- a/src/app/views/features/account/account.component.html
+++ b/src/app/views/features/account/account.component.html
@@ -126,21 +126,17 @@
         <div class="field">
           <label>行業</label>
           <p-dropdown formControlName="industry_id" [options]="getIndustries" [showClear]="true" placeholder="　"
-                      [filter]="true" optionLabel="label" appendTo="body" (onLazyLoad)="loadIndusty($event)"
+                      [filter]="true" optionLabel="name" appendTo="body" filterBy="name"
                       [lazy]="true" [virtualScroll]="true" [virtualScrollItemSize]="38"></p-dropdown>
         </div>
       </div>
       <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>父系帳戶</label>
-          <p-dropdown [options]="GetAllAccount" formControlName="parent_account_name"
-                      [filter]="true" optionLabel="label" appendTo="body" (onLazyLoad)="loadAccount($event)"
-                      [lazy]="true"
-                      filterBy="label" [showClear]="true" placeholder="選擇現有帳戶" [virtualScroll]="true"
-                      [virtualScrollItemSize]="38"
-                      [ngClass]="{'ng-dirty':account_form.controls['parent_account_name'].hasError('required') && account_form.controls['parent_account_name'].touched}">
-          </p-dropdown>
-
+          <p-dropdown [options]="getAccounts" formControlName="parent_account_id" (onChange)="parent_account_selection($event)"
+                      [filter]="true" optionLabel="name" appendTo="body" [lazy]="true"
+                      filterBy="name" [showClear]="true" placeholder="選擇現有帳戶" [virtualScroll]="true"
+                      [virtualScrollItemSize]="38"></p-dropdown>
         </div>
       </div>
       <div class="col-12 md:col-6 lg:col-6">
