--- a/src/app/views/features/account/view-account/view-account.component.html
+++ b/src/app/views/features/account/view-account/view-account.component.html
@@ -71,15 +71,16 @@
                 <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
                     <label>行業</label>
-                    <p-dropdown placeholder="　" [disabled]="true" [options]="industry_id" optionLabel="name"
-                                (onChange)="industryValue($event)"
-                                formControlName="industry_id" appendTo="body"></p-dropdown>
+                    <p-dropdown formControlName="industry_id" [options]="getIndustries" [showClear]="true" placeholder="　"
+                                [filter]="true" optionLabel="name" appendTo="body" filterBy="name" (onClear)="clearControls('industry_id')"></p-dropdown>
                   </div>
                 </div>
                 <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
                     <label>父系帳戶</label>
-                    <p-dropdown placeholder="　" appendTo="body" [filter]="true" filterBy="name"></p-dropdown>
+                    <p-dropdown [options]="getAccounts" formControlName="parent_account_id"
+                                [filter]="true" optionLabel="name" appendTo="body" (onClear)="clearControls('parent_account_id')"
+                                filterBy="name" [showClear]="true" placeholder="選擇現有帳戶"></p-dropdown>
                   </div>
                 </div>
                 <div class="col-12 md:col-6 lg:col-6">
