--- a/src/app/views/features/contact/view-contact/view-contact.component.html
+++ b/src/app/views/features/contact/view-contact/view-contact.component.html
@@ -42,11 +42,10 @@
                 <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
                     <label><span class="text-red-600">*</span>帳戶</label>
-                    <p-dropdown [options]="GetAllAccount" (onChange)="accountValue($event)"
-                                formControlName="account_name"
-                                [filter]="true" optionLabel="label" appendTo="body"
-                                filterBy="label" [showClear]="true" placeholder="選擇現有帳戶"
-                                [ngClass]="{'ng-dirty':contact_form.controls['account_name'].hasError('required') && contact_form.controls['account_name'].touched}">
+                    <p-dropdown [options]="getAccounts" formControlName="account_id"
+                                [filter]="true" optionLabel="name" appendTo="body" (onChange)="searchContact(contact_form.controls['account_id'].value)"
+                                filterBy="name" [showClear]="true" placeholder="選擇現有帳戶"
+                                [ngClass]="{'ng-dirty':contact_form.controls['account_id'].hasError('required') && contact_form.controls['account_id'].touched}">
                     </p-dropdown>
                   </div>
                 </div>
@@ -68,7 +67,6 @@
                   <div class="field">
                     <label>稱謂</label>
                     <p-dropdown placeholder="請選擇" [disabled]="true" [options]="salutation" optionLabel="name"
-                                (onChange)="salutationValue($event)"
                                 formControlName="salutation" appendTo="body"></p-dropdown>
                   </div>
                 </div>
@@ -107,8 +105,8 @@
                 <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
                     <label>直屬上司</label>
-                    <p-dropdown placeholder="請選擇" [disabled]="true"
-                                formControlName="reports_to" appendTo="body"></p-dropdown>
+                    <p-dropdown placeholder="請選擇" [options]="getContacts" optionLabel="name"
+                                formControlName="supervisor_id" appendTo="body"></p-dropdown>
                   </div>
                 </div>
               </div>
