--- a/src/app/views/features/lead/view-lead/view-lead.component.html
+++ b/src/app/views/features/lead/view-lead/view-lead.component.html
@@ -99,7 +99,7 @@
                   <div class="field">
                     <label><span class="text-red-600">*</span>線索狀態</label>
                     <p-dropdown placeholder="請選擇" optionLabel="name" [options]=which
-                                formControlName="status" appendTo="body" (onChange)="statusValue($event)"
+                                formControlName="status" appendTo="body"
                                 [ngClass]="{'ng-dirty':lead_form.controls['status'].hasError('required') && lead_form.controls['status'].touched}"
                     ></p-dropdown>
                   </div>
@@ -113,10 +113,10 @@
                 <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
                     <label><span class="text-red-600">*</span>帳戶</label>
-                    <p-dropdown [options]="GetAllAccount" (onChange)="accountValue($event)"
-                                formControlName="account_name"
-                                [filter]="true" appendTo="body" optionLabel="label"
-                                filterBy="label" [showClear]="true" placeholder="選擇現有帳戶">
+                    <p-dropdown [options]="getAccounts"
+                                formControlName="account_id"
+                                [filter]="true" appendTo="body" optionLabel="name"
+                                filterBy="name" [showClear]="true" placeholder="選擇現有帳戶">
                     </p-dropdown>
                   </div>
                 </div>
@@ -138,7 +138,7 @@
                   <div class="field">
                     <label>分級</label>
                     <p-dropdown placeholder="請選擇" [disabled]="true" [options]="rating" optionLabel="name"
-                                (onChange)="ratingValue($event)" formControlName="rating"
+                                formControlName="rating"
                                 appendTo="body"></p-dropdown>
                   </div>
                 </div>
@@ -146,7 +146,7 @@
                   <div class="field">
                     <label>線索來源</label>
                     <p-dropdown placeholder="請選擇" [disabled]="true" [options]="source" optionLabel="name"
-                                (onChange)="sourceValue($event)" formControlName="source"
+                                formControlName="source"
                                 appendTo="body"></p-dropdown>
                   </div>
                 </div>
@@ -231,10 +231,10 @@
       <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>帳戶</label>
-          <p-dropdown [options]="GetAllAccount" (onChange)="accountValue($event)" formControlName="account_name"
-                      [filter]="true" appendTo="body" optionLabel="label"
-                      filterBy="label" [showClear]="true" placeholder="線索帳戶"
-                      [ngClass]="{'ng-dirty':opportunity_form.controls['account_name'].hasError('required') && opportunity_form.controls['account_name'].touched}">
+          <p-dropdown [options]="getAccounts" formControlName="account_id"
+                      [filter]="true" appendTo="body" optionLabel="name"
+                      filterBy="name" [showClear]="true" placeholder="線索帳戶"
+                      [ngClass]="{'ng-dirty':opportunity_form.controls['account_id'].hasError('required') && opportunity_form.controls['account_id'].touched}">
           </p-dropdown>
         </div>
       </div>
@@ -260,7 +260,7 @@
         <div class="field">
           <label>階段</label>
           <p-dropdown [disabled]="true" [options]="stage" optionLabel="name"
-                      (onChange)="stageValue($event)" formControlName="stage" appendTo="body"
+                      formControlName="stage" appendTo="body"
                       [ngClass]="{'ng-dirty':opportunity_form.controls['stage'].hasError('required')  && opportunity_form.controls['stage'].touched}"></p-dropdown>
         </div>
       </div>
@@ -268,7 +268,7 @@
         <div class="field">
           <label><span class="text-red-600">*</span>預測種類</label>
           <p-dropdown placeholder="請選擇" [disabled]="true" [options]="forecast_category" optionLabel="name"
-                      (onChange)="forecast_categoryValue($event)" formControlName="forecast_category"
+                      formControlName="forecast_category"
                       appendTo="body"
                       [ngClass]="{'ng-dirty':opportunity_form.controls['forecast_category'].hasError('required')  && opportunity_form.controls['forecast_category'].touched}"></p-dropdown>
         </div>
