--- a/src/app/views/features/opportunity/view-opportunity/view-opportunity.component.html
+++ b/src/app/views/features/opportunity/view-opportunity/view-opportunity.component.html
@@ -100,20 +100,20 @@
                   <div class="field">
                     <ng-container *ngIf="!opportunity_form.controls['lead_id'].value">
                       <label><span class="text-red-600">*</span>帳戶</label>
-                      <p-dropdown [options]="GetAllAccount" (onChange)="accountValue($event)"
-                                  formControlName="account_name"
-                                  [filter]="true" appendTo="body" optionLabel="label"
-                                  filterBy="label" [showClear]="true" placeholder="選擇現有帳戶"
-                                  [ngClass]="{'ng-dirty':opportunity_form.controls['account_name'].hasError('required') && opportunity_form.controls['account_name'].touched}">
+                      <p-dropdown [options]="getAccounts"
+                                  formControlName="account_id"
+                                  [filter]="true" appendTo="body" optionLabel="name"
+                                  filterBy="name" [showClear]="true" placeholder="選擇現有帳戶"
+                                  [ngClass]="{'ng-dirty':opportunity_form.controls['account_id'].hasError('required') && opportunity_form.controls['account_id'].touched}">
                       </p-dropdown>
                     </ng-container>
                     <ng-container *ngIf="opportunity_form.controls['lead_id'].value">
-                      <label>帳戶</label>
-                      <p-dropdown [options]="GetAllAccount" (onChange)="accountValue($event)"
-                                  formControlName="account_name"
-                                  [filter]="true" appendTo="body" optionLabel="label"
-                                  filterBy="label" [showClear]="true" placeholder="線索帳戶"
-                                  [ngClass]="{'ng-dirty':opportunity_form.controls['account_name'].hasError('required') && opportunity_form.controls['account_name'].touched}">
+                      <label>線索帳戶</label>
+                      <p-dropdown [options]="getAccounts"
+                                  formControlName="account_id"
+                                  [filter]="true" appendTo="body" optionLabel="name"
+                                  filterBy="name" [showClear]="true" placeholder="選擇現有帳戶"
+                                  [ngClass]="{'ng-dirty':opportunity_form.controls['account_id'].hasError('required') && opportunity_form.controls['account_id'].touched}">
                       </p-dropdown>
                     </ng-container>
                   </div>
@@ -121,30 +121,55 @@
                 <ng-container *ngIf="opportunity_form.controls['lead_id'].value">
                   <div class="col-12 md:col-12 lg:col-12">
                     <div class="field">
-                      <label><span class="text-red-600">*</span>線索描述</label>
-                      <p-dropdown formControlName="lead_name" [options]="GetAllLead"
-                                  [filter]="true" optionLabel="label" appendTo="body" [lazy]="true"
+                      <label>線索描述</label>
+                      <p-dropdown formControlName="lead_id" [options]="getLeads"
+                                  [filter]="true" optionLabel="description" appendTo="body" [lazy]="true"
                                   filterBy="label" [showClear]="true" placeholder="選擇現有線索" [virtualScroll]="true"
                                   [virtualScrollItemSize]="38"
-                                  [ngClass]="{'ng-dirty':opportunity_form.controls['lead_name'].hasError('required') && opportunity_form.controls['lead_name'].touched}">
+                                  [ngClass]="{'ng-dirty':opportunity_form.controls['lead_id'].hasError('required') && opportunity_form.controls['lead_id'].touched}">
                       </p-dropdown>
+                    </div>
+                  </div>
+                </ng-container>
+                <ng-container *ngIf="status === stage[0].name || status === stage[1].name">
+                  <div class="col-12 md:col-6 lg:col-6">
+                    <div class="field">
+                      <label><span class="text-red-600">*</span>階段</label>
+                      <p-dropdown [disabled]="true" [options]="stage" optionLabel="name"
+                                  formControlName="stage" appendTo="body"
+                                  [ngClass]="{'ng-dirty':opportunity_form.controls['stage'].hasError('required') && opportunity_form.controls['stage'].touched}"></p-dropdown>
+                    </div>
+                  </div>
+                </ng-container>
+                <ng-container *ngIf="!(status === stage[0].name || status === stage[1].name)">
+                  <div class="col-10 md:col-5 lg:col-5">
+                    <div class="field">
+                      <label><span class="text-red-600">*</span>階段</label>
+                      <p-dropdown [disabled]="true" [options]="stage" optionLabel="name"
+                                  formControlName="stage" appendTo="body"
+                                  [ngClass]="{'ng-dirty':opportunity_form.controls['stage'].hasError('required') && opportunity_form.controls['stage'].touched}"></p-dropdown>
+                    </div>
+                  </div>
+                  <div class="col-2 md:col-1 lg:col-1 mt-5">
+                    <div class="field">
+                      <p-button pTooltip="建立報價" (click)="showQuote()" icon="pi pi-tag"
+                                styleClass="p-button-rounded p-button-secondary p-button-text p-button-lg "></p-button>
                     </div>
                   </div>
                 </ng-container>
                 <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
-                    <label><span class="text-red-600">*</span>階段</label>
-                    <p-dropdown [disabled]="true" [options]="stage" optionLabel="name"
-                                (onChange)="stageValue($event)" formControlName="stage" appendTo="body"
-                                [ngClass]="{'ng-dirty':opportunity_form.controls['stage'].hasError('required') && opportunity_form.controls['stage'].touched}"></p-dropdown>
+                    <label>金額</label>
+                    <br>
+                    <p-inputNumber class="w-full" mode="currency" currency="TWD" formControlName="amount"
+                                   [minFractionDigits]="0"></p-inputNumber>
                   </div>
                 </div>
                 <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
                     <label><span class="text-red-600">*</span>預測種類</label>
                     <p-dropdown placeholder="請選擇" [disabled]="true" [options]="forecast_category" optionLabel="name"
-                                (onChange)="forecast_categoryValue($event)" formControlName="forecast_category"
-                                appendTo="body"
+                                formControlName="forecast_category" appendTo="body"
                                 [ngClass]="{'ng-dirty':opportunity_form.controls['forecast_category'].hasError('required') && opportunity_form.controls['forecast_category'].touched}"></p-dropdown>
                   </div>
                 </div>
@@ -153,14 +178,6 @@
                     <label><span class="text-red-600">*</span>結束日期</label>
                     <p-calendar formControlName="close_date" appendTo="body" dateFormat="yy-mm-dd"
                                 [ngClass]="{'ng-dirty':opportunity_form.controls['close_date'].hasError('required') && opportunity_form.controls['close_date'].touched}"></p-calendar>
-                  </div>
-                </div>
-                <div class="col-12 md:col-6 lg:col-6">
-                  <div class="field">
-                    <label>金額</label>
-                    <br>
-                    <p-inputNumber class="w-full" mode="currency" currency="TWD" formControlName="amount"
-                                   [minFractionDigits]="0"></p-inputNumber>
                   </div>
                 </div>
                 <div class="col-12 md:col-6 lg:col-6">
@@ -237,3 +254,118 @@
     </p-card>
   </div>
 </div>
+<form [formGroup]="quote_form">
+  <p-dialog [(visible)]="quoteDialog" header="新增報價" [modal]="true">
+    <div class="grid">
+      <div class="col-12 md:col-6 lg:col-6">
+        <div class="field">
+          <label>編號</label>
+          <br>
+          <label class="mt-2 ml-2 disable">{{(quote_form.controls['code'].value)}}</label>
+        </div>
+      </div>
+      <div class="col-12 md:col-6 lg:col-6">
+        <div class="field">
+          <label>狀態</label>
+          <p-dropdown placeholder="請選擇" appendTo="body" [options]="quoteStatus" formControlName="quoteStatus"
+                      optionLabel="name"></p-dropdown>
+        </div>
+      </div>
+      <div class="col-12 md:col-12 lg:col-12">
+        <div class="field">
+          <label><span class="required-star">*</span>名稱</label>
+          <input pInputText formControlName="name"
+                 [ngClass]="{'ng-dirty':quote_form.controls['name'].hasError('required') && quote_form.controls['name'].touched}">
+        </div>
+      </div>
+      <div class="col-12 md:col-6 lg:col-6">
+        <div class="field">
+          <label><span class="required-star">*</span>商機</label>
+          <p-dropdown placeholder="搜尋商機" formControlName="opportunity_id"
+                      [filter]="true" filterBy="name" [showClear]="true"
+                      [ngClass]="{'ng-dirty':quote_form.controls['opportunity_id'].hasError('required') && quote_form.controls['opportunity_id'].touched}"></p-dropdown>
+        </div>
+      </div>
+      <div class="col-12 md:col-6 lg:col-6">
+        <div class="field">
+          <label>到期日期</label>
+          <p-calendar [appendTo]="'body'" dateFormat="yy-mm-dd" [showButtonBar]="true" formControlName="expiration_date"
+                      [readonlyInput]="true"></p-calendar>
+        </div>
+      </div>
+      <div class="col-12 md:col-6 lg:col-6">
+        <div class="field">
+          <label>小計</label>
+          <br>
+          <!--          <label class="mt-2 ml-2">NT$ {{quote_form.controls['sub_total'].value}}</label>-->
+          <p-inputNumber [disabled]="true" formControlName="sub_total" mode="currency" currency="TWD" locale="en-US"
+                         [minFractionDigits]="0" class="no-border w-full"
+                         [ngClass]="{'no-border': true}"></p-inputNumber>
+        </div>
+      </div>
+      <div class="col-12 md:col-6 lg:col-6">
+        <div class="field">
+          <label>稅額</label>
+          <br>
+          <p-inputNumber class="w-full" formControlName="tax" mode="currency" currency="TWD" locale="en-US"
+                         [minFractionDigits]="0" [min]="0"></p-inputNumber>
+        </div>
+      </div>
+      <div class="col-12 md:col-6 lg:col-6">
+        <div class="field">
+          <label>折扣(四捨五入)</label>
+          <br>
+          <!--          <label class="mt-2 ml-2">NT$ {{quote_form.controls['discount'].value}}</label>-->
+          <p-inputNumber [disabled]="true" formControlName="discount" suffix="%"
+                         [minFractionDigits]="0" class="no-border w-full"
+                         [ngClass]="{'no-border': true}"></p-inputNumber>
+        </div>
+      </div>
+      <div class="col-12 md:col-6 lg:col-6">
+        <div class="field">
+          <label>運費及其他費用</label>
+          <br>
+          <p-inputNumber class="w-full" formControlName="shipping_and_handling" mode="currency" currency="TWD"
+                         locale="en-US"
+                         [minFractionDigits]="0" [min]="0"></p-inputNumber>
+        </div>
+      </div>
+      <div class="col-12 md:col-6 lg:col-6">
+        <div class="field">
+          <label>總計</label>
+          <br>
+          <!--          <label class="mt-2 ml-2">NT$ {{quote_form.controls['grand_total'].value}}</label>-->
+          <p-inputNumber [disabled]="true" formControlName="grand_total" mode="currency" currency="TWD" locale="en-US"
+                         [minFractionDigits]="0" class="no-border w-full"
+                         [ngClass]="{'no-border': true}"></p-inputNumber>
+        </div>
+      </div>
+      <div class="col-12 md:col-12 lg:col-12">
+        <div class="field">
+          <label>描述</label>
+          <textarea [rows]="5" pInputTextarea formControlName="description"></textarea>
+        </div>
+      </div>
+      <div class="col-12 md:col-6 lg:col-6">
+        <label>建立者：</label>
+        <br>
+        <div class="mt-3 field">
+          <label class="disable">{{(quote_form.controls['created_by'].value)}}</label>
+          <label class="ml-2 disable">{{(quote_form.controls['created_at'].value|date:'yyyy-MM-dd HH:mm')}}</label>
+        </div>
+      </div>
+      <div class="col-12 md:col-6 lg:col-6">
+        <label>上次修改者：</label>
+        <br>
+        <div class="mt-3 field">
+          <label class="disable">{{(quote_form.controls['updated_by'].value)}}</label>
+          <label class="ml-2 disable">{{(quote_form.controls['updated_at'].value|date:'yyyy-MM-dd HH:mm')}}</label>
+        </div>
+      </div>
+    </div>
+    <div class="flex justify-content-end">
+      <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary mr-2"></p-button>
+      <p-button label="新增" (click)="postQuoteRequest()" styleClass="p-button-info"></p-button>
+    </div>
+  </p-dialog>
+</form>
