--- a/src/app/views/features/contract/view-contract/view-contract.component.html
+++ b/src/app/views/features/contract/view-contract/view-contract.component.html
@@ -6,7 +6,9 @@
           <h3>{{contract_form.controls['code'].value}}</h3>
           <p-divider></p-divider>
           <span class="p-buttonset flex justify-content-center">
-            <p-button pTooltip="刪除" tooltipPosition="top" icon="pi pi-trash" (click)="deleteContractRequest(this.c_id)"
+            <p-button *ngIf="stage === '草稿'" pTooltip="刪除" tooltipPosition="top" icon="pi pi-trash" (click)="deleteContractRequest(this.c_id)"
+                                  styleClass="p-button-rounded p-button-secondary p-button-outlined border-round-left-lg"></p-button>
+            <p-button *ngIf="stage === '審批中' || stage === '拒絕' || stage === '等待簽名' || stage === '已簽署' || stage === '已取消' || stage === '已過期'" tooltipPosition="top" icon="pi pi-trash" pTooltip="{{stage}}狀態不可刪除" [disabled]="true"
                       styleClass="p-button-rounded p-button-secondary p-button-outlined border-round-left-lg"></p-button>
             <p-button pTooltip="複製" tooltipPosition="top" icon="pi pi-copy"
                       styleClass="p-button-rounded p-button-secondary p-button-outlined border-round-right-lg"></p-button>
@@ -135,7 +137,7 @@
                         <label>訂單</label>
                       </div>
                       <div class="justify-content-end">
-                       <p-button icon="pi pi-plus" pTooltip="新增訂單" tooltipPosition="top" (click)="showDialog('add')"
+                       <p-button *ngIf="stage === '草稿' || stage === '審批中' || stage === '拒絕' || stage === '等待簽名'" icon="pi pi-plus" pTooltip="新增訂單" tooltipPosition="top" (click)="showDialog('add')"
                         styleClass="p-button-text"></p-button>
                       </div>
                     </div>
@@ -158,7 +160,7 @@
                       <td>{{ contract_order.start_date |date:'yyyy-MM-dd'}}</td>
                       <td>{{ contract_order.contract_code }}</td>
                       <td>
-                        <div class="flex justify-content-end">
+                        <div class="flex justify-content-end" *ngIf="stage === '草稿' || stage === '審批中' || stage === '拒絕' || stage === '等待簽名'">
                         <p-button icon="pi pi-pencil" pTooltip="編輯" tooltipPosition="top" (click)="showDialog('edit',contract_order)"
                                   styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
                         <p-button icon="pi pi-trash" styleClass="p-button-rounded p-button-secondary p-button-text" (click)="deleteOrderRequest(contract_order.order_id)"
@@ -255,7 +257,7 @@
                   </div>
                 </div>
               </div>
-              <ng-container *ngIf="stage !=='已取消' && stage !=='已過期'">
+              <ng-container *ngIf="stage === '草稿' || stage === '審批中' || stage === '拒絕' || stage === '等待簽名'">
               <div class="flex justify-content-end">
                 <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary mr-2"></p-button>
                 <p-button label="儲存" (click)="patchContractRequest()" styleClass="p-button-info"></p-button>
