--- a/src/app/views/features/campaign/view-campaign/view-campaign.component.html
+++ b/src/app/views/features/campaign/view-campaign/view-campaign.component.html
@@ -6,7 +6,9 @@
           <h3>{{name}}</h3>
           <p-divider></p-divider>
           <span class="p-buttonset flex justify-content-center">
-            <p-button pTooltip="刪除" tooltipPosition="top" icon="pi pi-trash"
+            <p-button *ngIf="stage === '策劃中'" pTooltip="刪除" tooltipPosition="top" icon="pi pi-trash"
+                      styleClass="p-button-rounded p-button-secondary p-button-outlined border-round-left-lg"></p-button>
+            <p-button *ngIf="stage === '進行中' || stage === '已完成' || stage === '已中止'" tooltipPosition="top" icon="pi pi-trash" pTooltip="{{stage}}狀態不可刪除" [disabled]="true"
                       styleClass="p-button-rounded p-button-secondary p-button-outlined border-round-left-lg"></p-button>
             <p-button pTooltip="複製" tooltipPosition="top" icon="pi pi-copy"
                       styleClass="p-button-rounded p-button-secondary p-button-outlined border-round-right-lg"></p-button>
