--- a/src/app/views/features/quote/view-quote/view-quote.component.html
+++ b/src/app/views/features/quote/view-quote/view-quote.component.html
@@ -205,9 +205,7 @@
                   <div class="field">
                     <label><span class="required-star">*</span>商機</label>
                     <p-dropdown placeholder="搜尋商機" [options]="GetAllOpportunity"
-                                [formControlName]="'opportunity_id'"
-                                [(ngModel)]="selectedOpportunity_id" [filter]="true" filterBy="label" [showClear]="true"
-                                (ngModelChange)="selectedOpportunity()"
+                                [formControlName]="'opportunity_id'" [filter]="true" filterBy="label" [showClear]="true"
                                 [ngClass]="{'ng-dirty':quote_form.controls['opportunity_id'].hasError('required') && quote_form.controls['opportunity_id'].touched}"></p-dropdown>
                   </div>
                 </div>
