--- a/src/app/views/features/contract/contract.component.html
+++ b/src/app/views/features/contract/contract.component.html
@@ -5,7 +5,7 @@
       <div class="flex justify-content-end">
         <span class="p-buttonset">
           <p-button icon="pi pi-plus" (click)="showDialog('add')" styleClass="p-button-text"
-                    pTooltip="新增契約" tooltipPosition="top"></p-button>
+                    pTooltip="新增契約"></p-button>
         </span>
       </div>
       <p-table [value]="GetAllContract" [paginator]="true" [rows]="1000000" [totalRecords]="totalRecords"
