--- a/src/app/views/features/order/view-order/view-order.component.html
+++ b/src/app/views/features/order/view-order/view-order.component.html
@@ -24,7 +24,7 @@
             </div>
             <div class="col-12 flex justify-content-center">
               <label>契約號碼: </label>
-              <label>{{order_form.controls['contract_code'].value}}</label>
+              <label>{{ContractCode}}</label>
             </div>
             <div class="col-12 flex justify-content-center">
               <label>訂單開始日期: </label>
@@ -48,14 +48,14 @@
       <span class="flex justify-content-center">
         <button class="flex justify-content-center" [ngClass]="{
                 'surface-400': stage === '草稿',
-                'bg-green-300': stage === '啟動中'
+                'bg-blue-300': stage === '啟動中'
             }">
           <span class="span" *ngIf="stage==='草稿'">草稿</span>
           <i class="pi pi-check" *ngIf="stage==='啟動中'"></i>
        </button>
        <button class="flex justify-content-center" [ngClass]="{
                 'has-check':stage === '草稿',
-                'bg-green-300': stage === '啟動中'
+                'bg-blue-300': stage === '啟動中'
             }">
           <span class="span">啟動中</span>
         </button>
@@ -145,10 +145,9 @@
                 <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
                     <label><span class="required-star">*</span>契約號碼</label>
-                    <p-dropdown placeholder="搜尋契約" [disabled]="true" formControlName="contract_id" appendTo="body"
-                                [options]="GetAllContract" [(ngModel)]="selectedContract_id"
-                                (ngModelChange)="validateStartDate()"
-                                [filter]="true" filterBy="label" [showClear]="true"
+                    <p-dropdown placeholder="搜尋契約" [disabled]="true" formControlName="contract_code" appendTo="body"
+                                [options]="GetAllContract"  (ngModelChange)="validateStartDate()"
+                                [filter]="true" filterBy="code" optionLabel="code" [showClear]="true"
                                 [ngClass]="{'ng-dirty': order_form.controls['contract_id'].hasError('required') && order_form.controls['contract_id'].touched}"
                     ></p-dropdown>
                   </div>
